src/objects/Historical_Occupancy__c.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Historical Occupancies</relationshipLabel>
        <relationshipName>Historical_Occupancies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Building__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Desk_Occupancy_Current__c</fullName>
        <label>Desk Occupancy % Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Desk_Occupancy_Next_Month__c</fullName>
        <label>Desk Occupancy % Next Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Desk_Occupancy_Projected__c</fullName>
        <label>Desk Occupancy % Projected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Desks_Available__c</fullName>
        <label>Desks Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Booked__c</fullName>
        <label>Desks Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Move_Ins__c</fullName>
        <label>Desks Move Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Move_Outs__c</fullName>
        <label>Desks Move Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Next_Month__c</fullName>
        <label>Desks Next Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Occupied__c</fullName>
        <label>Desks Occupied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Pending_Signature__c</fullName>
        <label>Desks Pending Signature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Transfer_Move_Ins__c</fullName>
        <label>Desks Transfer Move Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Transfer_Move_Outs__c</fullName>
        <label>Desks Transfer Move Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Desks_Transfer_Net__c</fullName>
        <label>Desks Transfer Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Occupancy_Current__c</fullName>
        <label>Office Occupancy % Current</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_Occupancy_Next_Month__c</fullName>
        <label>Office Occupancy % Next Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_Occupancy_Projected__c</fullName>
        <label>Office Occupancy % Projected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Offices_Available__c</fullName>
        <label>Offices Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Booked__c</fullName>
        <label>Offices Booked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Move_Ins__c</fullName>
        <label>Offices Move Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Move_Outs__c</fullName>
        <label>Offices Move Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Next_Month__c</fullName>
        <label>Offices Next Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Occupied__c</fullName>
        <label>Offices Occupied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Pending_Signature__c</fullName>
        <label>Offices Pending Signature</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Transfer_Move_Ins__c</fullName>
        <label>Offices Transfer Move Ins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Transfer_Move_Outs__c</fullName>
        <label>Offices Transfer Move Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Transfer_Net__c</fullName>
        <label>Offices Transfer Net</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Occupancy__c</fullName>
        <label>Target Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Desks__c</fullName>
        <label>Total Desks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Offices__c</fullName>
        <label>Total Offices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Historical Occupancy</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HO-{0000}</displayFormat>
        <label>Historical Occupancy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Occupancies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>